Increase z-index for fixed position element

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body {
   bottom: 4rem;
   right: 2rem;
   cursor: pointer;
-  /* z-index: 99; */
+   z-index: 9998; 
   animation: logoAnimation 4s linear infinite;
   transform-origin: center;
   display: flex;
